--- a/templates/b2b-email-list.html
+++ b/templates/b2b-email-list.html
@@ -348,92 +348,92 @@
 
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/magento-users-list"
+                <td><a href="/magento-users-list"
                     title="Magento Users Email List">Magento Users List</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/ceo-email-list"
+                <td><a href="/ceo-email-list/"
                     title="Fortune 500 Companies CEO Email Adddress">Fortune 500 Companies CEO Email Address</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/hospital-email-list"
+                <td><a href="/hospital-email-list/"
                     title="Hospital Email List">Hospital Email Addresses</a></td>
 
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/peoplesoft-users-list"
+                <td><a href="/peoplesoft-users-list/"
                     title="PeopleSoft Users Email List">Companies Using PeopleSoft</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cmo-email-list"
+                <td><a href="/cmo-email-list/"
                     title="CMO Sales Leads">CMO Sales Leads</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/hospital-executives-email-list"
+                <td><a href="/hospital-executives-email-list/"
                     title="Hospital Executives Email List">Hospital Executives Email List</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/quickbooks-users-list"
+                <td><a href="/quickbooks-users-list/"
                     title="QuickBooks Users Email List">List of QuickBooks Users</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cfo-email-list"
+                <td><a href="/cfo-email-list/"
                     title="CFO Contact Database">CFO Contact Database</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/dermatologists-email-list"
+                <td><a href="/dermatologists-email-list/"
                     title="List of Dermatologists">List of Dermatologists</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/hadoop-users-list"
+                <td><a href="/hadoop-users-list/"
                     title="Hadoop Users Email List">Hadoop Customers List</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cto-email-list"
+                <td><a href="/cto-email-list/"
                     title="CTO Email List">Full List of CTO's</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/neurologists-email-list"
+                <td><a href="/neurologists-email-list/"
                     title="Neurologists Email List">Neurologists Sales Leads</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/mongodb-users-list"
+                <td><a href="/mongodb-users-list/"
                     title="MongoDB Users Email List">List of companies using MongoDB</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cio-email-list"
+                <td><a href="/cio-email-list/"
                     title="CIO Marketing Database">CIO Marketing Database</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/physician-assistant-email-list"
+                <td><a href="/physician-assistant-email-list/"
                     title="Physician Assistant Contact Data">Physician Assistant Contact Data</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/managed-service-providers-email-list"
+                <td><a href="/managed-service-providers-email-list/"
                     title="Managed Service Providers List">Managed Service Providers List</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/directors-email-list"
+                <td><a href="/directors-email-list/"
                     title="Directors Email List">Email List of Top Companies Directors</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/physician-email-list"
+                <td><a href="/physician-email-list/"
                     title="Physicians Email Database">Physicians Email Database</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/tableau-users-list"
-                    title="Tableau Users Email List">List of companies using Tableau</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/attorney-email-list"
+                <td><a href="/tableau-users-list"
+                    title="Tableau Users Email List/">List of companies using Tableau</a></td>
+                <td><a href="/attorney-email-list/"
                     title="Mailing List of Attorney">Mailing List of Attorney</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/chiropractor-email-list"
+                <td><a href="/chiropractor-email-list/"
                     title="Chiropractors Email List">Email List of Chiropractors</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/adp-users-list"
+                <td><a href="/adp-users-list/"
                     title="ADP Clients List">ADP Clients List</a></td>
-                <td><a href="https://www.spanglobalservices.com/database/insurance-brokers-email-list"
+                <td><a href="/insurance-brokers-email-list/"
                     title="Insurance Brokers Email Addresses">Insurance Brokers Email Addresses</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/hospital-decision-makers-email-list"
+                <td><a href="/hospital-decision-makers-email-list"
                     title="Hospital Decision Makers Email List">Hospital Decision Makers Email Leads</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/solarwinds-users-list"
+                <td><a href="/solarwinds-users-list/"
                     title="List of Solarwinds Customers">List of Solarwinds Customers</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cpa-email-list"
+                <td><a href="/cpa-email-list/"
                     title="Certified Public Accountant Email List">Certified Public Accountant Email List</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/pathologists-email-list"
+                <td><a href="/pathologists-email-list/"
                     title="Pathologist Email List">Pathologist Contact Database</a></td>
               </tr>
 
               <tr>
-                <td><a href="https://www.spanglobalservices.com/technology-lists/value-added-resellers-email-list"
+                <td><a href="/value-added-resellers-email-list/"
                     title="Value Added Resellers contact Data">Value Added Resellers Contact Data</a></td>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cpo-email-list"
+                <td><a href="/cpo-email-list/"
                     title="Chief Purchasing Officer Email List">Chief Purchasing Officer Email List</a></td>
-                <td><a href="https://www.spanglobalservices.com/healthcare-lists/dentists-email-list"
+                <td><a href="/dentists-email-list/"
                     title="Dentists Email List">Dentists Email Addresses</a></td>
               </tr>
 
@@ -656,7 +656,7 @@
             from Span Global Services</h2>
           <p style="text-align:Justify;">In Stephen. R. Covey’s words, “The key is in not spending time, but investing
             in it”. The same formula applies to resources, and in this case, B2B email lists. Thus, the key to achieving
-            masterstrokes of marketing wins is to invest in <a href="https://www.spanglobalservices.com/email-lists"
+            masterstrokes of marketing wins is to invest in <a href="/email-lists"
               title="Premium Mailing Databases"><strong>premium mailing databases</strong></a> that enhance the
             likelihood of your B2B sales leads.</p>
           <p style="text-align:Justify;">The right data compilations can engineer long-standing relationships with A1
@@ -670,7 +670,7 @@
           <p style="text-align:Justify;">Irrespective of the mode of communication and the geographical location you
             choose, our data solutions guarantee 95-98% campaign deliverability.</p>
           <p style="text-align:Justify;">Discovering potent businesses and connecting with them is now easier than ever!
-            Get in touch with <a href="https://www.spanglobalservices.com/" title="Span Global Services"><strong>Span
+            Get in touch with <a href=/ title="Span Global Services"><strong>Span
                 Global Services</strong></a> today to experience excellence blended with credibility! So, what are you
             waiting for? Subscribe to the B2B email lists from our data data repositories right away and up your
             marketing game! </p>
@@ -956,9 +956,9 @@
           <div class="contact-quote">
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
-                action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data">
+                action=" " enctype="multipart/form-data">
                 <input name="subject" type="hidden" value="Contact Details from Span Global Services">
-                <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                <input name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group">
                     <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*">
