--- a/templates/contact.html
+++ b/templates/contact.html
@@ -249,7 +249,7 @@
                                                         value="newslettersubscribe" checked="" type="checkbox"> I would
                                                     like to subscribe to your Newsletter.</label> </div> <input
                                                 id="Website" name="Website" type="hidden"
-                                                value="https://www.spanglobalservices.com/contact-us" /> <input
+                                                value="/contact-us/" /> <input
                                                 id="source" name="source" type="hidden" value="Web Site Lead" />
                                             <div class="form-group mt-4"><button type="submit" class="circle-fa">SUBMIT
                                                     &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button>
