--- a/templates/data-append/b2b-email-appending.html
+++ b/templates/data-append/b2b-email-appending.html
@@ -110,26 +110,26 @@
                             executive decays on a monthly basis, <strong>b2b email appending services</strong> ensures that all non-accurate email ids are replaced with valid ones!</p>
                         <div class="row sicon">
                             <div class="col-lg-4 mb-4 ">
-                                <a href="https://www.spanglobalservices.com/data-append/email-appending" title="Email Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/email-appending-thumb.jpg" alt="Email Appending" class="respo-img" /> </div>
+                                <a href="/email-appending" title="Email Appending">
+                                    <div class="icon"><img src="/static/assets/img/email-appending-thumb.jpg" alt="Email Appending" class="respo-img" /> </div>
                                     <p class="description">Email<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/phone-appending" title="Phone Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/phone-appending-thumb.jpg" alt="Phone Appending" class="respo-img" /> </div>
+                                <a href="/phone-appending" title="Phone Appending">
+                                    <div class="icon"><img src="/static/assets/img/phone-appending-thumb.jpg" alt="Phone Appending" class="respo-img" /> </div>
                                     <p class="description">Phone<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/contact-appending" title="Contact Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" class="respo-img" /> </div>
+                                <a href="/contact-appending" title="Contact Appending">
+                                    <div class="icon"><img src="/static/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" class="respo-img" /> </div>
                                     <p class="description">Contact<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/b2c-email-appending" title="B2C Email Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/b2c-email-appending-thumb.jpg" alt="B2C-email Appending" class="respo-img" /> </div>
+                                <a href="/b2c-email-appending" title="B2C Email Appending">
+                                    <div class="icon"><img src="/static/assets/img/b2c-email-appending-thumb.jpg" alt="B2C-email Appending" class="respo-img" /> </div>
                                     <p class="description">B2C Email<br/> Appending</p>
                                 </a>
                             </div>
@@ -149,7 +149,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="/append-maile/r" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action="/append-maile/r" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -221,7 +221,7 @@
                     <div class="col-lg-8 section-fpad wow fadeInLeft">
                         <p>At Span Global Services we try to deliver updated and appended b2b databases in the shortest span of time. But how do we carry out this entire process of <strong>b2b email appending</strong>? Let's have a glimpse of the steps here:</p>
                         <ul>
-                            <li>The <strong>b2b email appending services</strong> commences with collecting the obsolete <a href="https://www.spanglobalservices.com/b2b-email-list" title="B2B Email Database"><strong>b2b email database</strong></a> from our
+                            <li>The <strong>b2b email appending services</strong> commences with collecting the obsolete <a href="/b2b-email-list/" title="B2B Email Database"><strong>b2b email database</strong></a> from our
                                 clients.</li>
                             <li>It is then formatted and matched with our master b2b email database through automated and manual process, so that no detail is missed. New email addresses are added, spelling errors are corrected, missing ids are filled in
                                 etc.</li>
@@ -269,7 +269,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
