--- a/templates/data-append/tech-installs-append.html
+++ b/templates/data-append/tech-installs-append.html
@@ -30,37 +30,37 @@
                         </ul>
                         <p>We currently provide <strong>Technology Appending Services</strong> of Top B2B businesses across the globe that offer software, hardware, cloud solutions, Application Development and more.</p>
                         <p>As industry leaders we recommend a blend of all <strong>tech install appending services</strong> for optimum returns as appending is a process that depends on the contact status and also the various subsets within the dataset itself.</p>
-                        <p>We have a master database of over 80+ million B2B <a href="https://www.spanglobalservices.com/technology-lists/" title="technology users list">technology users list</a> against which your data will be matched. It’s fast and efficient
+                        <p>We have a master database of over 80+ million B2B <a href="/" title="technology users list">technology users list</a> against which your data will be matched. It’s fast and efficient
                             and will let you keep your marketing calendar ticking and your lead generation thriving.</p>
                         <p><strong>Fill in the gaps in your database, with our niche appending services:</strong></p>
                         <div class="row sicon">
                             <div class="col-lg-4 mb-4 ">
-                                <a href="https://www.spanglobalservices.com/data-append/email-appending" title="Email Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/email-appending-thumb.jpg" alt="Email Append" title="Email Append" class="respo-img" /> </div>
+                                <a href="/email-appending" title="Email Appending">
+                                    <div class="icon"><img src="/static/assets/img/email-appending-thumb.jpg" alt="Email Append" title="Email Append" class="respo-img" /> </div>
                                     <p class="description">Email<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/phone-appending" title="Phone Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/phone-appending-thumb.jpg" alt="Phone Append" title="Phone Append" class="respo-img" /> </div>
+                                <a href="/phone-appending" title="Phone Appending">
+                                    <div class="icon"><img src="/static/assets/img/phone-appending-thumb.jpg" alt="Phone Append" title="Phone Append" class="respo-img" /> </div>
                                     <p class="description">Phone<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/contact-appending" title="Contact Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" title="Contact Append" class="respo-img" /> </div>
+                                <a href="/contact-appending" title="Contact Appending">
+                                    <div class="icon"><img src="/static/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" title="Contact Append" class="respo-img" /> </div>
                                     <p class="description">Contact<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/b2c-email-appending" title="B2C Email Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/b2c-email-appending-thumb.jpg" alt="B2C Email Appending" title="B2C Email Append" class="respo-img" /> </div>
+                                <a href="/b2c-email-appending" title="B2C Email Appending">
+                                    <div class="icon"><img src="/static/assets/img/b2c-email-appending-thumb.jpg" alt="B2C Email Appending" title="B2C Email Append" class="respo-img" /> </div>
                                     <p class="description">B2C Email<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/social-media-profile-appending" title="Social Media Profile Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/social-profile-appending-thumb.jpg" alt="social-profile Appending" title="social-profile Appending" class="respo-img" /> </div>
+                                <a href="/social-media-profile-appending" title="Social Media Profile Appending">
+                                    <div class="icon"><img src="/static/assets/img/social-profile-appending-thumb.jpg" alt="social-profile Appending" title="social-profile Appending" class="respo-img" /> </div>
                                     <p class="description">Social Media<br/>Profile Appending</p>
                                 </a>
                             </div>
@@ -73,7 +73,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="https://www.spanglobalservices.com/scripts/append-mailer" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -116,12 +116,12 @@
         <section class="blue-sec-light">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInRight padlf-none"> <img src="https://www.spanglobalservices.com/assets/img/tech-install-sub.jpg" alt="Tech Install" title="Tech Install" class="full-img" /> </div>
+                    <div class="col-lg-6 wow fadeInRight padlf-none"> <img src="/static/assets/img/tech-install-sub.jpg" alt="Tech Install" title="Tech Install" class="full-img" /> </div>
                     <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">
                         <div class="">
                             <h4 class="subhead-big mb-2">Manage Data </h4>
                             <h2 class=" normal-head">before it manages you </h2>
-                            <div class="mb-4 mt-4"> <a href="https://www.spanglobalservices.com/contact-us" class="blk-btn ">Let's Talk &nbsp; <i class="fa fa-phone"></i></a> </div>
+                            <div class="mb-4 mt-4"> <a href="/contact-us/" class="blk-btn ">Let's Talk &nbsp; <i class="fa fa-phone"></i></a> </div>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
