--- a/templates/data-intelligence.html
+++ b/templates/data-intelligence.html
@@ -52,7 +52,7 @@
     }
 </style>
 {% endblock %} {% block content %}
-<section class="inner-banner data-intelligence-banner"> <div class="overlay"> <div class="container"> <div class="row"> <div class="col-lg-6 mb-3 wow fadeInLeft"></div> <div class="col-lg-6 mb-3 wow fadeInLeft"> <h1>Get More Out Of What Data Intelligence Can Do For You</h1> <p><strong>Make business communication easier with the right business data.</strong></p> <div class="mt-4"> <a href="https://www.spanglobalservices.com/connect-with-us" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Book A Free Data Consultation Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div> </div> </div> </div> </div></section>
+<section class="inner-banner data-intelligence-banner"> <div class="overlay"> <div class="container"> <div class="row"> <div class="col-lg-6 mb-3 wow fadeInLeft"></div> <div class="col-lg-6 mb-3 wow fadeInLeft"> <h1>Get More Out Of What Data Intelligence Can Do For You</h1> <p><strong>Make business communication easier with the right business data.</strong></p> <div class="mt-4"> <a href="/contact-us/" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Book A Free Data Consultation Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div> </div> </div> </div> </div></section>
 <main id="main">
     <section class="section-sec-0-60">
         <div class="container">
@@ -69,29 +69,29 @@
                         to keep your data up-to-date to get optimum results and improve revenues generation. Translate data into actionable insights with our solutions:</p>
                     <div class="row">
                         <div class="col-lg-4 wow fadeInLeft">
-                            <h3 class="normal-head-green"><a href="https://www.spanglobalservices.com/list-management" title="List Management">List Management</a></h3>
+                            <h3 class="normal-head-green"><a href="/list-management/" title="List Management">List Management</a></h3>
                             <ul class="space-list ml-0">
-                                <li><a href="https://www.spanglobalservices.com/email-lists" alt="Email Lists" title="Email Lists">Email Lists</a></li>
-                                <li><a href="https://www.spanglobalservices.com/list-building" alt="List Building" title="List Building">List Building</a></li>
+                                <li><a href="/email-lists/" alt="Email Lists" title="Email Lists">Email Lists</a></li>
+                                <li><a href="/list-building/" alt="List Building" title="List Building">List Building</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-8 wow fadeInRight">
-                            <h3 class="normal-head-green"><a href="https://www.spanglobalservices.com/database-enhancement" style="text-decoration:none" title="Data Management">Data Management</a></h3>
+                            <h3 class="normal-head-green"><a href="/database-enhancement/" style="text-decoration:none" title="Data Management">Data Management</a></h3>
                             <div class="row">
                                 <div class="col-lg-6 wow fadeInLeft">
                                     <ul class="space-list ml-0">
-                                        <li><a href="https://www.spanglobalservices.com/data-cleansing" alt="Data Cleansing" title="Data Cleansing">Data Cleansing</a></li>
-                                        <li><a href="https://www.spanglobalservices.com/data-profiling" alt="Data Profiling" title="Data Profiling">Data Profiling</a></li>
-                                        <li><a href="https://www.spanglobalservices.com/data-verification" alt="Data Verification" title="Data Verification">Data Verification</a></li>
-                                        <li><a href="https://www.spanglobalservices.com/data-append/data-appending" alt="Data Appending" title="Data Appending">Data Appending</a></li>
+                                        <li><a href="/data-cleansing/" alt="Data Cleansing" title="Data Cleansing">Data Cleansing</a></li>
+                                        <li><a href="/data-profiling/" alt="Data Profiling" title="Data Profiling">Data Profiling</a></li>
+                                        <li><a href="/data-verification/" alt="Data Verification" title="Data Verification">Data Verification</a></li>
+                                        <li><a href="/data-appending/" alt="Data Appending" title="Data Appending">Data Appending</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-6 wow fadeInLeft">
                                     <ul class="space-list ml-0">
-                                        <li><a href="https://www.spanglobalservices.com/data-append/email-appending" alt="Email Appending" title="Email Appending">Email Appending</a></li>
-                                        <li><a href="https://www.spanglobalservices.com/data-append/phone-appending" alt="Phone Appending" title="Phone Appending">Phone Appending</a></li>
-                                        <li><a href="https://www.spanglobalservices.com/data-append/contact-appending" alt="Contact Appending" title="Contact Appending">Contact Appending</a></li>
-                                        <li><a href="https://www.spanglobalservices.com/data-append/social-media-profile-appending" alt="Social Media Profile Appending" title="Social Media Profile Appending">Social Media Profile Appending</a></li>
+                                        <li><a href="/email-appending" alt="Email Appending" title="Email Appending">Email Appending</a></li>
+                                        <li><a href="/phone-appending" alt="Phone Appending" title="Phone Appending">Phone Appending</a></li>
+                                        <li><a href="/contact-appending" alt="Contact Appending" title="Contact Appending">Contact Appending</a></li>
+                                        <li><a href="/social-media-profile-appending" alt="Social Media Profile Appending" title="Social Media Profile Appending">Social Media Profile Appending</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                             <h4>REQUEST<br/> A CALL BACK NOW</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail" method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -235,7 +235,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
