--- a/templates/email-appending.html
+++ b/templates/email-appending.html
@@ -42,10 +42,10 @@
             <div class="row">
                 <div class="col-lg-7 section-fpad wow fadeInLeft mb-sec">
                     <h2 class="subhead-small-blk mb-sec">Revamp and Reactivate Your Database by Availing Our Email Appending Solutions</h2>
-                    <p style="text-align:Justify;">Business expansion through B2B email marketing is impossible without having the right email addresses in hand. If you opt for <strong>email appending services</strong> by partnering with us - we will revamp your <a href="https://www.spanglobalservices.com/email-lists"
+                    <p style="text-align:Justify;">Business expansion through B2B email marketing is impossible without having the right email addresses in hand. If you opt for <strong>email appending services</strong> by partnering with us - we will revamp your <a href="/email-lists/"
                             title="Email Database"><strong>email database</strong></a> in minimum time to market and provide you with the latest email address data of your targeted decision makers and marketing professionals.</p>
                     <p style="text-align:Justify;">The future of B2B marketing communication seems to be immensely bright. Several trends such as globalization, continuous investments in research and development, newer techniques of multi-channel communication, product proliferation,
-                        and audience engagement through personalized content are the key drivers for B2B markers in <a href="https://www.spanglobalservices.com/lead-generation" title="Lead Generation"><strong>lead generation</strong></a>.</p>
+                        and audience engagement through personalized content are the key drivers for B2B markers in <a href="/lead-generation/" title="Lead Generation"><strong>lead generation</strong></a>.</p>
                     <p style="text-align:Justify;">But most B2B marketers fail to leverage from these avenues as they don’t have access to the right email data. Buy an email list from Span Global Services or <strong>append your email data</strong> file with us. Revamp your list to
                         make the most out of present market opportunities. </p>
                     <h2 class="subhead-small-blk">Our Niche Appending Services Includes:</h2>
@@ -88,7 +88,7 @@
                             <h4>Free Append Test</h4>
                             </br>
                             <div class="form">
-                                <form name="f20" id="contact-form" action="/append-mailer/" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f20" id="contact-form" action="/append-mailer/" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -335,7 +335,7 @@
                         will provide you with updated &amp; responsive contact lists segmented in multiple fields - such as full names, email addresses, direct phone numbers, social media profile details etc.</p>
                     <p>But purchasing email lists often strains the budget. In that case, we suggest you go for appending your emails. With Span Global Services, you can upgrade your marketing data for better targeting &amp; run efficient campaigns to get
                         better visibility in the global B2B market Space.</p>
-                    <p style="text-align:Justify;">So hurry up and step up your revenue with Span Global Services' opt-in & deliverable <strong><a href="https://www.spanglobalservices.com/data-append/b2b-email-appending">B2B email appending services</a></strong>. We know that it is
+                    <p style="text-align:Justify;">So hurry up and step up your revenue with Span Global Services' opt-in & deliverable <strong><a href="/b2b-email-appending">B2B email appending services</a></strong>. We know that it is
                         a highly competitive world out there and we have companies willing to append your contacts at throwaway prices. We, on the other hand, aim to stay ahead of the competition by providing email contact data that is not only accurate
                         but also highly responsive and deliverable. So make the smart move now and improve your brand visibility worldwide.</p>
                 </div>
@@ -402,7 +402,7 @@
                                         </div>
                                         <div id="collapsefive" class="collapse" aria-labelledby="headingfive" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>At Span Global Services we understand the importance of verified <a href="https://www.spanglobalservices.com/b2b-email-list">B2B data</a> and go the extra mile to <strong>append email addresses</strong>.
+                                                <p>At Span Global Services we understand the importance of verified <a href="/b2b-email-list/">B2B data</a> and go the extra mile to <strong>append email addresses</strong>.
                                                     Span Global Services has assisted marketers in the past who have always come back to invest in our <strong>email appending services</strong>. We help marketers leverage business and revamp an existing
                                                     list with our impeccable yet affordable email appending services. </p>
                                             </div>
@@ -446,7 +446,7 @@
                                         <div id="collapseeight" class="collapse" aria-labelledby="headingeight" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <p>Companies often collect raw customer information of their clients such as phone numbers, emails, or addresses. This data is verified to remove incorrect data to make it error free and then matched with our
-                                                    master file. We then add only opt-in data to the email list. We then send a welcome mail to check the deliverability of the data. It is then sent to your <a href="https://www.spanglobalservices.com/email-lists">email address</a>                                                    for you to download. </p>
+                                                    master file. We then add only opt-in data to the email list. We then send a welcome mail to check the deliverability of the data. It is then sent to your <a href="/email-lists/">email address</a>                                                    for you to download. </p>
                                             </div>
                                         </div>
                                     </div>
@@ -473,7 +473,7 @@
                                         </div>
                                         <div id="collapseten" class="collapse" aria-labelledby="headingten" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p><strong>Email Appending</strong> follows a very simple principle of using known customer data and searching the corresponding <a href="https://www.spanglobalservices.com/email-lists">email list</a> from
+                                                <p><strong>Email Appending</strong> follows a very simple principle of using known customer data and searching the corresponding <a href="/email-lists/">email list</a> from
                                                     the vendors database. This essentially revamps the customers existing list and boosts B2B mailing databases and campaign returns.</p>
                                             </div>
                                         </div>
@@ -498,7 +498,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
@@ -527,7 +527,7 @@
                 <h4 class="modal-title">Get Started with Email Append</h4> <button type="button" class="close" data-dismiss="modal">×</button> </div>
             <div class="modal-body" id="file">
                 <div class="form">
-                    <form name="f7" method="post" action="https://www.spanglobalservices.com/scripts/mailer.php" enctype="multipart/form-data" onSubmit="javascript:return getCountvalidation();"> <input name="fieldOrder" type="hidden" value="name,email,phone,comments,upload"> <input name="subject" type="hidden" value="Get Count Request from Span Global Services"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks">
+                    <form name="f7" method="post" action="" enctype="multipart/form-data" onSubmit="javascript:return getCountvalidation();"> <input name="fieldOrder" type="hidden" value="name,email,phone,comments,upload"> <input name="subject" type="hidden" value="Get Count Request from Span Global Services"> <input type="hidden" name="returnURL" value=" ">
                         <div class=" form-row">
                             <div class="col-lg-6 form-group">
                                 <div class="input-container"> <input type="text" name="fname1" class="form-control" id="fname1" placeholder="First Name*"> </div>
@@ -552,7 +552,7 @@
                         <div class="form-group"> <label for="user">Begin Free Trial: Upload Sample File :<span style="color:#Ff0000" ;>*</span></label> <input type="file" name="upload" id="upload" value="" style="background:#ffffff;" /> </div>
                         <div class="form-group mt-4"><button type="submit" class="circle-fa">SUBMIT &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button></div>
                     </form>
-                    <div class="text-center"> <a href="https://www.spanglobalservices.com/privacy">"Your privacy is important to us"</a> </div>
+                    <div class="text-center"> <a href="/privacy/">"Your privacy is important to us"</a> </div>
                 </div>
             </div>
         </div>
