--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,7 +18,7 @@
                                 alt="Twitter" target="_blank">
                                 <img src="/static/assets/img/tw.png" alt="Twitter" class="respo-img" />
                             </a> <a href="" alt="LinkedIn" target="_blank"> <img src="/static/assets/img/in.png" alt="LinkedIn" class="respo-img" /> </a>
-                            <a href="" alt="YouTube" target="_blank"> <img src="/static/assets/img/youtube.png" alt="YouTube" class="respo-img" /> </a> <a href="https://www.instagram.com/spanglobalservices/ "
+                            <a href="" alt="YouTube" target="_blank"> <img src="/static/assets/img/youtube.png" alt="YouTube" class="respo-img" /> </a> <a href="#"
                                 alt="Instagram" target="_blank"> <img src="/static/assets/img/insta.png" alt="Instagram" class="respo-img" /> </a> </div>
                     </div>
                     <div class="clearfix"></div>
@@ -123,7 +123,7 @@
             <div class="form-group">
               <textarea class="form-control " name="message" rows="3" placeholder="Requirement*"></textarea>
             </div>
-<!--            <input id="Website" name="Website" type="hidden" value="https://www.spanglobalservices.com/b2b-email-list" />-->
+<!--            <input id="Website" name="Website" type="hidden" value="/b2b-email-list" />-->
 <!--            <input id="source" name="source" type="hidden" value="Web Site Lead" />-->
             <div class="form-group mt-4">
               <button type="submit" class="circle-fa">SUBMIT &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button>
@@ -253,8 +253,8 @@
 
         <div class="form">
 
-          <form name="hpopup" id="home-form" action="https://www.spanglobalservices.com/scripts/formmail" method="post" onSubmit="return homepopup()">
-            <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks">
+          <form name="hpopup" id="home-form" action=" " method="post" onSubmit="return homepopup()">
+            <input type="hidden" name="returnURL" value=" ">
             <input name="title" type="hidden" value="Contact Request from Span Global Services">
 
 
@@ -305,7 +305,7 @@
               <textarea class="form-control " name="comments" rows="3" placeholder="Message*"></textarea>
             </div>
 
-            <input id="Website" name="Website" type="hidden" value="https://www.spanglobalservices.com/b2b-email-list" />
+            <input id="Website" name="Website" type="hidden" value="/b2b-email-list/" />
             <input id="source" name="source" type="hidden" value="Web Site Lead" />
 
             <div class="form-group mt-4"><button type="submit" class="circle-fa">Connect Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button></div>
@@ -333,7 +333,7 @@
 <script src="/static/assets/vendor/jquery-touchswipe/jquery.touchSwipe.min.js"></script>
 
 <script src="/static/assets/js/main.js"></script>
-<script src="https://www.spanglobalservices.com/scripts/validation.js"></script>
+<script src="/scripts/validation.js"></script>
 <script src="/static/assets/js/sticky-kit.min.js"></script>
 <script>
   $(".floating-div").stick_in_parent({
