--- a/templates/gov-sector-decision-makers-data.html
+++ b/templates/gov-sector-decision-makers-data.html
@@ -156,7 +156,7 @@
             </table>
             
             <div class="text-center mt-5">
-                <a href="https://www.spanglobalservices.com/contact-us" class="green-btn circle-fa">Connect With Our Government Sector Lead Data Experts &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
+                <a href="/contact-us" class="green-btn circle-fa">Connect With Our Government Sector Lead Data Experts &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
             </div>
             
             
@@ -202,8 +202,8 @@
     <div class="form">
          
 			
-		    <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail" method="post" onSubmit="return validationcon()" > 		
-			<input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks">
+		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
+			<input type="hidden" name="returnURL" value=" ">
 			<input name="title" type="hidden" value="Contact Request from Span Global Services">
 
 
@@ -331,7 +331,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 pb-4 wow fadeInRight">
-          	<img src="https://www.spanglobalservices.com/assets/img/gov-sector-sub.jpg" alt="Gov Sector Decision Makers Data" class="respo-img mb-3" />
+          	<img src="/static/assets/img/gov-sector-sub.jpg" alt="Gov Sector Decision Makers Data" class="respo-img mb-3" />
           </div>
           <div class="col-lg-6 pb-4 section-fpad mb-4 wow fadeInLeft centeralign">
           	<div>
@@ -370,9 +370,9 @@
           <div class="col-lg-7 wow fadeInRight">
             <div class="contact-quote">
     <div class="form">
-          <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data">
+          <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
             <input name="subject" type="hidden" value="Contact Details from Span Global Services">
-            <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+            <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
               		<input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*">
