--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <meta name="keywords" content="Buy Email Address List, Buy Email List, Buy Targeted Email Lists, USA Email Lueads, Business to Business Database" />
     <meta name="robots" content="index, follow" />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.spanglobalservices.com/">
+    <meta property="og:url" content=/>
     <meta property="og:title" content="Marketing Data Intelligence to Fuel Growth - Span Global Services">
     <meta property="og:description" content="Span Global Services is the industry leader for business mailing lists and sales leads. Get access to 25+ million businesses data across the world.">
     <meta property="og:image" content="/static/assets/img/logo.png">
