--- a/templates/industry-wise-lists/manufacturing-industries-email-list.html
+++ b/templates/industry-wise-lists/manufacturing-industries-email-list.html
@@ -33,13 +33,13 @@
             from Span Global Services lets you do just that. </p>
           <p align="justify">Span Global Services' manufacturing industry mailing list is a comprehensive database of
             relevant decision-makers and industry professionals to help you pitch your product or service to the right
-            audience. With an updated and verified <a href="https://www.spanglobalservices.com/email-lists"
+            audience. With an updated and verified <a href="/email-lists"
               target="_blank">email list</a>, you can interact with manufacturing industry experts, managers, buyers,
             operators, and more. </p>
           <p align="justify">Our team of data experts works tirelessly to collect and clean data from several ethical
             sources to ensure you get access to only the most genuine leads.</p>
 
-          <a href="https://www.spanglobalservices.com/connect-with-us" class="green-btn circle-fa">Connect With US!
+          <a href="/connect-with-us" class="green-btn circle-fa">Connect With US!
             &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
         </div>
         <div class="col-lg-5 mb-4 wow fadeInRight">
@@ -50,9 +50,9 @@
               <div class="form">
 
 
-                <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail"
+                <form name="f12" id="contact-form" action=" "
                   method="post" onSubmit="return validationcon()">
-                  <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks">
+                  <input type="hidden" name="returnURL" value=" ">
                   <input name="title" type="hidden" value="Contact Request from Span Global Services">
 
 
@@ -412,7 +412,7 @@
             List</h2>
           <p style="text-align:Justify;">If you have a product that can cater to the specific needs of the manufacturing
             industry, a reliable manufacturing companies mailing list is all you need to reach top decision-makers. Our
-            <a href="https://www.spanglobalservices.com/mailing-lists">mailing lists</a> allow you to explore newer
+            <a href="/mailing-lists">mailing lists</a> allow you to explore newer
             markets with access to a global database. So, you can reach out to relevant leads in the US, the UK,
             Australia, Asia, Canada, and more.</p>
           <p style="text-align:Justify;">Besides, our data is ethically sourced from several reliable sources, including
@@ -453,9 +453,9 @@
           <div class="contact-quote">
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
-                action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data">
+                action=" " enctype="multipart/form-data">
                 <input name="subject" type="hidden" value="Contact Details from Span Global Services">
-                <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                <input name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group">
                     <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*">
