--- a/templates/phone-appending.html
+++ b/templates/phone-appending.html
@@ -106,7 +106,7 @@
                         <h2 class="subhead-small-blk">Get phone numbers of your customers and prospects by effectively using Telephone Appending Services</h2>
                         <p>Have you amassed a bunch of postal addresses and wish you had telephone numbers for them as well? Do you know where to look when you want to <strong>append relevant phone numbers</strong> to these records? Span Global Services'
                             <strong>Phone Appending</strong> adds phone numbers and helps in connecting better to your customers and prospects. </p>
-                        <p>For any telemarketing campaign to be successful, you need an <a href="https://www.spanglobalservices.com/email-lists" title="Email List"><strong>accurate email list</strong></a> that connects you with prospects.</p>
+                        <p>For any telemarketing campaign to be successful, you need an <a href="/email-lists" title="Email List"><strong>accurate email list</strong></a> that connects you with prospects.</p>
                         <p>Span Global Services enhances your existing <strong>database by appending</strong> missing phone numbers and replacing wrong phone numbers with updated ones. More importantly, it is also ensured that none of these phone numbers
                             are on the ‘Do Not Call’ registry. </p>
                         <p>We cater to a variety of industries globally and our <strong>phone append</strong> line of services provides you with access to the largest repository of phone numbers that are thoroughly verified to deliver excellent result to
@@ -131,7 +131,7 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/contact-appending" title="Contact Appending">
+                                <a href="/contact-appending" title="Contact Appending">
                                     <div class="icon"><img src="/static/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" class="respo-img" /> </div>
                                     <p class="description">Contact<br/> Appending</p>
                                 </a>
@@ -156,7 +156,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="https://www.spanglobalservices.com/scripts/append-mailer" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="/"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="/"><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -247,7 +247,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
