--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -37,7 +37,7 @@
                         hereafter.</p>
                     <p style="text-align:Justify;"><strong>To report any violations or abuse of our services, or to
                         enquire about this policy, contact Span Global Services by mail <a
-                                href="mailto:info@spanglobalservices.com">info@spanglobalservices.com</a> or call 1
+                                href="mailto:info@affluencebusiness.com">info@spanglobalservices.com</a> or call 1
                         (877) 755-0023 .</strong></p>
                     <h3 class="normal-head">Compliance References:</h3>
                     <p style="text-align:Justify;">Span Global Services complies with all federal and state laws
@@ -83,8 +83,8 @@
                         our website and email alerts.</p>
                     <h3 class="normal-head">2. Disclosure and/or Sharing of Personal Information</h3>
                     <p style="text-align:Justify;"><strong>2.1.</strong>Span Global Services reserves full ownership
-                        over the information collected on this domain <a href="https://www.spanglobalservices.com"
-                                                                         title="Span Global Services">(https://www.spanglobalservices.com)</a>
+                        over the information collected on this domain <a href="https://www.affluencebusiness.com"
+                                                                         title="affluence business">(https://www.affluencebusiness.com)</a>
                         and its subsidiaries. The said information is collected from reputed sources (Section 1.2) and
                         from different points in the said domain and its sub-domains. We will not sell, share, and/or
                         rent the said data to third-party vendor(s) in other ways than disclosed as below:</p>
@@ -168,7 +168,7 @@
                         <li>Request for a machine-readable copy of the data we have of them.</li>
                     </ul>
                     <p style="text-align:Justify;">To exercise any of the rights listed above, please email us at <a
-                            href="mailto:info@spanglobalservices.com">info@spanglobalservices.com </a>or write to us at
+                            href="mailto:info@affluencebusiness.com">info@spanglobalservices.com </a>or write to us at
                         the following address: Span Global Services, 297 Kingsbury Grade, Suite 100, Stateline, NV
                         89449.</p>
                     <p style="text-align:Justify;"><strong>Please note:</strong> We cannot always delete records of all
@@ -280,9 +280,9 @@
                     <h3 class="normal-head">Questions and Suggestions</h3>
                     <p>For any queries, doubts, or suggestions regarding our privacy policy statement above, please
                         contact Span Global Services at:</p>
-                    <p> Phone: 1 (877) 755-0023<br>Email: <a href="mailto:info@spanglobalservices.com">info@spanglobalservices.com</a>
+                    <p> Phone: 1 (877) 755-0023<br>Email: <a href="mailto:info@affluencebusiness.com">info@spanglobalservices.com</a>
                     </p>
-                    <p><strong>Postal Address</strong> : <br>Spanglobalservices<br> 297 Kingsbury Grade, Suite 100,
+                    <p><strong>Postal Address</strong> : <br>affluence business<br> 297 Kingsbury Grade, Suite 100,
                         Stateline, NV 89449</p></div>
                 <div class="clearfix"></div>
             </div>
