--- a/templates/refund-policy.html
+++ b/templates/refund-policy.html
@@ -27,33 +27,32 @@
     <section class="section-sec-0-60">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 section-fpad wow fadeInLeft"><h2 class="subhead-small-blk">Span Global Services
-                    Refund Policy</h2>
-                    <p>Our List collection and verification process is unique and not as of any other list compilers.
-                        Because, each of the lists we source is owned by distinct list owners and followed by triple
-                        verification process by email, phone and social media. As such, each set comes with different
-                        guarantees.</p>
-                    <p>Alongside, fresh data also degrades as much as 6% a month due to businesses breakdown with the
-                        rate of changes accelerating over time. We take modern figures to revive that data being
-                        “updated consistently.”</p>
-                    <h3 class="normal-head">WE BELIEVE IN SAVING YOUR MONEY &amp; TIME</h3>
-                    <p>Our 100% satisfaction guarantee for lead solution is worth a reason! </p>
-                    <p>We guarantee that with every purchase, you get a delivery rate as guaranteed in the contract or
-                        you will receive a quick resolution for any bad data found and refund for any database portion
-                        of emails that bounces or is outdated, undelivered or disconnected*. </p>
-                    <p>After obtaining your list, if bad data exceeds even by 8%, you will receive the fund back quick
-                        by $0.30 beyond that percentage.</p>
-                    <p class="small-font"><em>*All guarantee rates are specified in the work order and as such, this
-                        refund policy will be applicable in accordance to it. All returned mails must be postmarked to
-                        our address within 30 days of commencement of purchase. Each purchase allows for only one
-                        refund. Lists purchased for fax and email purposes are not covered. Span Global Services
-                        reserves the right to verify the validity of the purchase at all times. Maximum refund value
-                        shall not exceed the original purchase value, including taxes. If the addressee refuses mail
-                        pieces that contain the accurate address, such cases will not be entertained for the purpose of
-                        refund. Exclusive coverage of the refund policy holds good for data from Span Global Services
-                        only. Lists that contain, in full or partial, data from third party or brokered data is not
-                        covered under this policy The right to close this guarantee without notice rests exclusively
-                        with Span Global Services.</em></p></div>
+                <div class="col-lg-12 section-fpad wow fadeInLeft"><h2 class="subhead-small-blk">Affluence Business
+                    Replacement Policy</h2>
+                    <p>We guarantee that with every purchase, you get a delivery rate as guaranteed in the contract or you will receive a quick resolution for any bad data found and replacement for any database portion of emails that bounces or is outdated, undelivered, or disconnected*.
+
+After obtaining your list, if bad data exceeds even by 8%, you will receive the replacement contacts 1 to 1 at no cost..</p>
+<!--                    <p>Alongside, fresh data also degrades as much as 6% a month due to businesses breakdown with the-->
+<!--                        rate of changes accelerating over time. We take modern figures to revive that data being-->
+<!--                        “updated consistently.”</p>-->
+<!--                    <h3 class="normal-head">WE BELIEVE IN SAVING YOUR MONEY &amp; TIME</h3>-->
+<!--                    <p>Our 100% satisfaction guarantee for lead solution is worth a reason! </p>-->
+<!--                    <p>We guarantee that with every purchase, you get a delivery rate as guaranteed in the contract or-->
+<!--                        you will receive a quick resolution for any bad data found and refund for any database portion-->
+<!--                        of emails that bounces or is outdated, undelivered or disconnected*. </p>-->
+<!--                    <p>After obtaining your list, if bad data exceeds even by 8%, you will receive the fund back quick-->
+<!--                        by $0.30 beyond that percentage.</p>-->
+<!--                    <p class="small-font"><em>*All guarantee rates are specified in the work order and as such, this-->
+<!--                        refund policy will be applicable in accordance to it. All returned mails must be postmarked to-->
+<!--                        our address within 30 days of commencement of purchase. Each purchase allows for only one-->
+<!--                        refund. Lists purchased for fax and email purposes are not covered. Span Global Services-->
+<!--                        reserves the right to verify the validity of the purchase at all times. Maximum refund value-->
+<!--                        shall not exceed the original purchase value, including taxes. If the addressee refuses mail-->
+<!--                        pieces that contain the accurate address, such cases will not be entertained for the purpose of-->
+<!--                        refund. Exclusive coverage of the refund policy holds good for data from Span Global Services-->
+<!--                        only. Lists that contain, in full or partial, data from third party or brokered data is not-->
+<!--                        covered under this policy The right to close this guarantee without notice rests exclusively-->
+<!--                        with Span Global Services.</em></p></div>-->
                 <div class="clearfix"></div>
             </div>
         </div>
