--- a/templates/technology-lists/crm-users-list.html
+++ b/templates/technology-lists/crm-users-list.html
@@ -33,7 +33,7 @@
 			   
 			  <h2 class="subhead-small-blk">Connect to your Niche Audience Worldwide with 100% Verified CRM Users Email List</h2>
 			   <p><strong>Some of the companies that use CRM software includes Activision, Ben & Jerry’s, Mayo Clinic, Progressive Insurance, Wells Fargo and many more.</strong></p>
-			   <p align="justify">Procure the CRM users email lists from <a href="https://www.spanglobalservices.com/"><strong>Span Global Services</strong></a> and get connected to your niche audience all across the globe. We offer accurate and dynamic data, collected from legitimate sources, that is verified by our expert data scientists.</p>
+			   <p align="justify">Procure the CRM users email lists from <a href=/><strong>Span Global Services</strong></a> and get connected to your niche audience all across the globe. We offer accurate and dynamic data, collected from legitimate sources, that is verified by our expert data scientists.</p>
 			   <p align="justify">Businesses use Customer Relationship Management (CRM) Software to foster a personalized relationship with the customer. They map the customer journey and make an effort to understand customer preferences and pain points. Doing all of this manually, however, would be time-consuming and prone to human error. The best option, therefore, is to partner with a professional CRM users database solution provider.</p>
 			   <p align="justify">So, if you are a marketer looking to target CRM software users, allow the data experts of Span Global Services to help you achieve marketing success using our <strong>CRM Users Mailing List</strong>.</p>
 			   
@@ -46,27 +46,27 @@
 </style>
 			   <div class="row respo-icon"> 
 			   <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-			   <img src="https://www.spanglobalservices.com/assets/img/assets-size.png" alt="assets-size" title="assets-size" class="respo-img" >
+			   <img src="/static/assets/img/assets-size.png" alt="assets-size" title="assets-size" class="respo-img" >
 			   <p>Assets Size</p>
 			   </div>
 			   <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;"> 
-			   <img src="https://www.spanglobalservices.com/assets/img/company-size.gif" alt="company-size" title="company-size" class="respo-img" >
+			   <img src="/static/assets/img/company-size.gif" alt="company-size" title="company-size" class="respo-img" >
 			    <p>Company Size</p>
 			   </div> 
 			   <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-			   <img src="https://www.spanglobalservices.com/assets/img/geographic.png" alt="geographic" title="geographic" class="respo-img" >
+			   <img src="/static/assets/img/geographic.png" alt="geographic" title="geographic" class="respo-img" >
 			    <p>Geographic</p>
 			   </div> 
 			   <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-			   <img src="https://www.spanglobalservices.com/assets/img/industry.gif" alt="industry" title="industry" class="respo-img" >
+			   <img src="/static/assets/img/industry.gif" alt="industry" title="industry" class="respo-img" >
 			    <p>Industry</p>
 			   </div>
 			   <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-			   <img src="https://www.spanglobalservices.com/assets/img/job-title.png" alt="job-title" title="job-title" class="respo-img" >
+			   <img src="/static/assets/img/job-title.png" alt="job-title" title="job-title" class="respo-img" >
 			    <p>Job Title</p>
 			   </div> 
 			   <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-			   <img src="https://www.spanglobalservices.com/assets/img/technology.gif" alt="technology" title="technology" class="respo-img" >
+			   <img src="/static/assets/img/technology.gif" alt="technology" title="technology" class="respo-img" >
 			    <p>Technology</p>
 			   </div>
 			   
@@ -84,8 +84,8 @@
     <div class="form">
          
 			
-		    <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail" method="post" onSubmit="return validationcon()" > 		
-			<input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks">
+		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
+			<input type="hidden" name="returnURL" value=" ">
 			<input name="title" type="hidden" value="Contact Request from Span Global Services">
 
 
@@ -275,10 +275,10 @@
 	  <div class="col-lg-12 mb-4 wow fadeInRight">
 	  
 	<div class="tab">
-      <button class="tablinks" onclick="openCity(event, 'Company')" id="defaultOpen"><img src="https://www.spanglobalservices.com/assets/img/company-icon.png" alt="Companies using CRM" title="" class="table-title-icon01"/>Companies Using CRM </button>
-      <button class="tablinks" onclick="openCity(event, 'Countries')"><img src="https://www.spanglobalservices.com/assets/img/crm-icon.png" alt="Market Share" title="" class="table-title-icon01"/>Market Share</button>
-      <button class="tablinks" onclick="openCity(event, 'Industries')"><img src="https://www.spanglobalservices.com/assets/img/industries-icon.png" alt="Industries" title="" class="table-title-icon01"/>Industries</button>
-      <button class="tablinks" onclick="openCity(event, 'Other')"><img src="https://www.spanglobalservices.com/assets/img/other-detials-icon.png" alt="Other Details" title="" class="table-title-icon01"/>Other Details</button>
+      <button class="tablinks" onclick="openCity(event, 'Company')" id="defaultOpen"><img src="/static/assets/img/company-icon.png" alt="Companies using CRM" title="" class="table-title-icon01"/>Companies Using CRM </button>
+      <button class="tablinks" onclick="openCity(event, 'Countries')"><img src="/static/assets/img/crm-icon.png" alt="Market Share" title="" class="table-title-icon01"/>Market Share</button>
+      <button class="tablinks" onclick="openCity(event, 'Industries')"><img src="/static/assets/img/industries-icon.png" alt="Industries" title="" class="table-title-icon01"/>Industries</button>
+      <button class="tablinks" onclick="openCity(event, 'Other')"><img src="/static/assets/img/other-detials-icon.png" alt="Other Details" title="" class="table-title-icon01"/>Other Details</button>
 </div>
 
 <div id="Company" class="tabcontent">
@@ -409,13 +409,13 @@
           	<div class="pad-sec">
 			
 			<h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ CRM Companies List</h2> 
-		  <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
+		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
-		   <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
-		    <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Customized lists based on user’s need</strong> </p>
-			 <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Worldwide outreach with data from US, Canada, UK, Europe, Australia, and other countries </strong></p>
-			 <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Fresh and active data verified quarterly with SMTP & NCOA protocols</strong></p>
-			 <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>All-inclusive data to facilitate multi-channel & cross-channel marketing.</strong></p>
+		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
+		    <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Customized lists based on user’s need</strong> </p>
+			 <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Worldwide outreach with data from US, Canada, UK, Europe, Australia, and other countries </strong></p>
+			 <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Fresh and active data verified quarterly with SMTP & NCOA protocols</strong></p>
+			 <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>All-inclusive data to facilitate multi-channel & cross-channel marketing.</strong></p>
 			 <div class="mb-4 mt-4">
                     <a href="#" data-toggle="modal" data-target="#send-message" class="green-btn circle-fa">Contact Us Now! &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
                 </div>
@@ -440,18 +440,18 @@
 		
 			<h2 class="subhead-small-blk">Meet your Prospecting Objectives with Data-driven and Result-oriented Approach</h2>
 			 <p style="text-align:Justify;">Cookie-cutter approaches may work with cookies, but they never will when it comes to a premium <strong>CRM Users Email List</strong>. We at Span Global Services understand that your unique business needs data that is accurate and designed to meet its goals like a glove. We customize our CRM users datasets and also ensure that they are 100% accurate and 95% deliverable at the most competitive prices. </p>
-			 <p style="text-align:Justify;">Moreover, we regularly update our <a href="https://www.spanglobalservices.com/email-lists" title="Email Database"><strong>email database</strong></a> to remove obsolete, redundant, and inaccurate data. Thus, ensuring that the data you receive always stays relevant and current. Also, since your database will be permission-based, you need not fear the silent treatment from the other end! </p>
+			 <p style="text-align:Justify;">Moreover, we regularly update our <a href="/email-lists" title="Email Database"><strong>email database</strong></a> to remove obsolete, redundant, and inaccurate data. Thus, ensuring that the data you receive always stays relevant and current. Also, since your database will be permission-based, you need not fear the silent treatment from the other end! </p>
 			
 			
 			
-            <p style="text-align:Justify;">With email lists, <a href="https://www.spanglobalservices.com/data-enrichment-services" title="Data Enrichment"><strong>data enrichment</strong></a>, and <a href="https://www.spanglobalservices.com/data-append/email-appending" title="Email Append Services"><strong>email append services</strong></a> from Span Global Services, you can increase the effectiveness of your marketing campaigns and watch your business soar to greater heights. Get in touch with us today!</p>
+            <p style="text-align:Justify;">With email lists, <a href="/data-enrichment-services" title="Data Enrichment"><strong>data enrichment</strong></a>, and <a href="/email-appending" title="Email Append Services"><strong>email append services</strong></a> from Span Global Services, you can increase the effectiveness of your marketing campaigns and watch your business soar to greater heights. Get in touch with us today!</p>
 		</div>
 		
 		
 		<div class="col-lg-6 mb-4 wow fadeInRight">
 		<h2 class="subhead-small-blk text-center">Data Fields We Provide Includes</h2>
 	
-     <p><a href="#requestquote"><img src="https://www.spanglobalservices.com/assets/img/technology-data-field.jpg" alt="Technology-Data-Fields" title="" class="repo-img"></a></p>
+     <p><a href="#requestquote"><img src="/static/assets/img/technology-data-field.jpg" alt="Technology-Data-Fields" title="" class="repo-img"></a></p>
 			
 			   
 			   </div>
@@ -541,9 +541,9 @@
           <div class="col-lg-7 wow fadeInRight">
             <div class="contact-quote">
     <div class="form">
-          <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data">
+          <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
             <input name="subject" type="hidden" value="Contact Details from Span Global Services">
-            <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+            <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
               		<input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*">
