--- a/templates/data-profiling.html
+++ b/templates/data-profiling.html
@@ -82,7 +82,7 @@
                             <h4>REQUEST<br/> A CALL BACK NOW</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail" method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -222,7 +222,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
