--- a/templates/professional-lists/cio-email-list.html
+++ b/templates/professional-lists/cio-email-list.html
@@ -47,32 +47,32 @@
           <h2 class="subhead-small-blk">Customize your CIO Email Database List by</h2>
           <div class="row respo-icon">
             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-              <img src="https://www.spanglobalservices.com/assets/img/assets-size.png" alt="assets-size"
+              <img src="/static/assets/img/assets-size.png" alt="assets-size"
                 title="assets-size" class="respo-img">
               <p>Assets Size</p>
             </div>
             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-              <img src="https://www.spanglobalservices.com/assets/img/company-size.gif" alt="company-size"
+              <img src="/static/assets/img/company-size.gif" alt="company-size"
                 title="company-size" class="respo-img">
               <p>Company Size</p>
             </div>
             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-              <img src="https://www.spanglobalservices.com/assets/img/geographic.png" alt="geographic"
+              <img src="/static/assets/img/geographic.png" alt="geographic"
                 title="geographic" class="respo-img">
               <p>Geographic</p>
             </div>
             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-              <img src="https://www.spanglobalservices.com/assets/img/industry.gif" alt="industry" title="industry"
+              <img src="/static/assets/img/industry.gif" alt="industry" title="industry"
                 class="respo-img">
               <p>Industry</p>
             </div>
             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-              <img src="https://www.spanglobalservices.com/assets/img/job-title.png" alt="job-title" title="job-title"
+              <img src="/static/assets/img/job-title.png" alt="job-title" title="job-title"
                 class="respo-img">
               <p>Job Title</p>
             </div>
             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;">
-              <img src="https://www.spanglobalservices.com/assets/img/technology.gif" alt="technology"
+              <img src="/static/assets/img/technology.gif" alt="technology"
                 title="technology" class="respo-img">
               <p>Technology</p>
             </div>
@@ -84,9 +84,9 @@
               <h4>GET A FREE QUOTE</h4>
               <p>We have got you covered on all your email and direct marketing needs</p>
               <div class="form">
-                <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail"
+                <form name="f12" id="contact-form" action=" "
                   method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
-                    value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden"
+                    value=" "><input name="title" type="hidden"
                     value="Contact Request from Span Global Services">
                   <div class=" form-row">
                     <div class="col-lg-6 form-group">
@@ -284,21 +284,21 @@
               Therefore, the role of the CIO is a pivotal one and at Span Global Services we understand the importance
               of authentic mailing data to reach them. Therefore, we provide <strong>CIO Mailing List</strong> that can
               maximize campaign success and help in effective brand building.</p>
-            <p style="text-align:Justify;">At <a href="https://www.spanglobalservices.com/"
+            <p style="text-align:Justify;">At <a href=/
                 title="Span Global Services"><strong>Span Global Services</strong></a>, the CIO email list is
               systematically compiled and validated to ensure that B2B campaigns are delivered to a niche audience base
-              without any glitches. The versatile <a href="https://www.spanglobalservices.com/professional-lists/"
+              without any glitches. The versatile <a href="/"
                 title="Professional email lists"><strong>professional email list</strong></a> is ideal for promotion of
               business service offers, IT solutions, networking services, publications, financial services and more. The
               <strong>CIO Email Address List</strong> is certain to amplify campaign success and help brands achieve
               unmatched returns through global B2B campaigns. </p>
-            <div class="mt-4"> <a href="https://www.spanglobalservices.com/request-quote"
+            <div class="mt-4"> <a href="/request-quote"
                 class="dgreen-btn circle-fa">Request for a Quote &nbsp; <i
                   class="fa icon ion-android-arrow-forward"></i></a> </div>
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight"><img
-            src="https://www.spanglobalservices.com/assets/img/geo-targeted-list-bg.jpg" class="respo-img"
+            src="/static/assets/img/geo-targeted-list-bg.jpg" class="respo-img"
             alt="Geo Targeted List" /></div>
       </div>
     </div>
@@ -308,7 +308,7 @@
       <div class="row">
         <div class="col-lg-6 mb-4 wow fadeInLeft">
           <h2 class="subhead-small-blk text-center">Data Fields We Provide Includes</h2><a href="#requestquote"><img
-              src="https://www.spanglobalservices.com/assets/img/Chief-Information-Officer.jpg" class="respo-img"
+              src="/static/assets/img/Chief-Information-Officer.jpg" class="respo-img"
               alt="CIO-Data-Fields"></a>
         </div>
         <div class="col-lg-6 mb-4 wow fadeInRight">
@@ -417,65 +417,65 @@
           <div class="dgreen-bg-list-outer">
             <table class="dgreen-bg-list">
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/ceo-email-list"
+                <td><a href="/ceo-email-list"
                     title="CEO Email Addresses">CEO Email Addresses</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cto-email-list"
+                <td><a href="/cto-email-list"
                     title="CTO Contact Data">CTO Contact Data</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cmo-email-list"
+                <td><a href="/cmo-email-list"
                     title="CMO Mailing Database">CMO Mailing Database</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cfo-email-list"
+                <td><a href="/cfo-email-list"
                     title="CFO Email Leads">CFO Email Leads</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cio-email-list"
+                <td><a href="/cio-email-list"
                     title="CIO Marketing Lists">CIO Marketing Lists</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/home-inspectors-email-list"
+                <td><a href="/home-inspectors-email-list"
                     title="Home Inspectors Email Addresses">Home Inspectors Email Addresses</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/fire-department-email-list"
+                <td><a href="/fire-department-email-list"
                     title="Fire Department Sales Leads">Fire Department Sales Leads</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/loan-officer-email-list"
+                <td><a href="/loan-officer-email-list"
                     title="Loan Officer Email List">Loan Officer Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/stockbrokers-email-list"
+                <td><a href="/stockbrokers-email-list"
                     title="StockBrokers Mailing List">StockBrokers Mailing List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/canadian-ceo-email-list"
+                <td><a href="/canadian-ceo-email-list"
                     title="Canadian CEO Email List">Canadian CEO Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/canadian-cfo-email-list"
+                <td><a href="/canadian-cfo-email-list"
                     title="Canadian CFO Email List">Canadian CFO Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/canadian-cmo-email-list"
+                <td><a href="/canadian-cmo-email-list"
                     title="Canadian CMO Email List">Canadian CMO Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/canadian-cpa-email-list"
+                <td><a href="/canadian-cpa-email-list"
                     title="Canadian CPA Email List">Canadian CPA Email List</a></td>
               </tr>
               <tr>
                 <td><a
-                    href="https://www.spanglobalservices.com/professional-lists/canadian-software-developers-email-list"
+                    href="/canadian-software-developers-email-list"
                     title="Canadian Software Developers Email List">Canadian Software Developers Email List</a></td>
               </tr>
               <tr>
                 <td><a
-                    href="https://www.spanglobalservices.com/professional-lists/chief-and-vp-of-operations-email-list"
+                    href="/chief-and-vp-of-operations-email-list"
                     title="Chief and VP of Operations Email List">Chief and VP of Operations Email List</a></td>
               </tr>
             </table>
@@ -485,63 +485,63 @@
           <div class="dgreen-bg-list-outer">
             <table class="dgreen-bg-list">
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/general-manager-email-list"
+                <td><a href="/general-manager-email-list"
                     title="General Manager Email List">General Managers Contacts</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/attorney-email-list"
+                <td><a href="/attorney-email-list"
                     title="Attorney Email List">Attorney/Lawyers Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/architect-email-list"
+                <td><a href="/architect-email-list"
                     title="architect Email List">Email List of Architect's</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/merchandise-manager-email-list"
+                <td><a href="/merchandise-manager-email-list"
                     title="Merchandise Manager Email List">Merchandise Manager Emails</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cpa-email-list"
+                <td><a href="/cpa-email-list"
                     title="CPA Email List">CPA Email Addresses</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/event-organizers-email-list"
+                <td><a href="/event-organizers-email-list"
                     title="Event Organizer Email List">List of Event Organizers</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/payroll-email-list"
+                <td><a href="/payroll-email-list"
                     title="Payroll Email List">Payroll Mailing Addresses</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/bankruptcy-email-list"
+                <td><a href="/bankruptcy-email-list"
                     title="Bankruptcy Email List">Bankruptcy Mailing Database</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/database/insurance-brokers-email-list"
+                <td><a href="/insurance-brokers-email-list"
                     title="Insurance Brokers Email List">Insurance Brokers Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/chief-and-vp-of-quality-email-list"
+                <td><a href="/chief-and-vp-of-quality-email-list"
                     title="Chief and VP of Quality Email List">Chief and VP of Quality Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/chief-and-vp-software-email-list"
+                <td><a href="/chief-and-vp-software-email-list"
                     title="Chief and VP of Software Email List">Chief and VP of Software Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/chro-email-list"
+                <td><a href="/chro-email-list"
                     title="CHRO Email List">CHRO Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/coo-email-list"
+                <td><a href="/coo-email-list"
                     title="COO Email List">COO Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/cso-email-list"
+                <td><a href="/cso-email-list"
                     title="CSO Email List">CSO Email List</a></td>
               </tr>
               <tr>
-                <td><a href="https://www.spanglobalservices.com/professional-lists/it-decision-makers-email-list"
+                <td><a href="/it-decision-makers-email-list"
                     title="IT Decision Makers Email List">IT Decision Makers Email List</a></td>
               </tr>
             </table>
@@ -565,9 +565,9 @@
           <div class="contact-quote">
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
-                action="https://www.spanglobalservices.com/scripts/formmail" enctype="multipart/form-data"> <input
+                action=" " enctype="multipart/form-data"> <input
                   name="subject" type="hidden" value="Contact Details from Span Global Services"> <input
-                  name="redirect_url" type="hidden" value="https://www.spanglobalservices.com/thanks">
+                  name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname"
                       placeholder="First Name*"> </div>
