--- a/templates/professional-lists/hr-executives-mailing-list.html
+++ b/templates/professional-lists/hr-executives-mailing-list.html
@@ -44,37 +44,37 @@
                     <div class="row respo-icon">
                         <div class="col-lg-2 wow fadeInLeft text-center"
                             style="visibility: visible; animation-name: fadeInLeft;"> <img
-                                src="https://www.spanglobalservices.com/assets/img/assets-size.png" alt="assets-size"
+                                src="/static/assets/img/assets-size.png" alt="assets-size"
                                 title="assets-size" class="respo-img">
                             <p>Assets Size</p>
                         </div>
                         <div class="col-lg-2 wow fadeInLeft text-center"
                             style="visibility: visible; animation-name: fadeInLeft;"> <img
-                                src="https://www.spanglobalservices.com/assets/img/company-size.gif" alt="company-size"
+                                src="/static/assets/img/company-size.gif" alt="company-size"
                                 title="company-size" class="respo-img">
                             <p>Company Size</p>
                         </div>
                         <div class="col-lg-2 wow fadeInLeft text-center"
                             style="visibility: visible; animation-name: fadeInLeft;"> <img
-                                src="https://www.spanglobalservices.com/assets/img/geographic.png" alt="geographic"
+                                src="/static/assets/img/geographic.png" alt="geographic"
                                 title="geographic" class="respo-img">
                             <p>Geographic</p>
                         </div>
                         <div class="col-lg-2 wow fadeInLeft text-center"
                             style="visibility: visible; animation-name: fadeInLeft;"> <img
-                                src="https://www.spanglobalservices.com/assets/img/industry.gif" alt="industry"
+                                src="/static/assets/img/industry.gif" alt="industry"
                                 title="industry" class="respo-img">
                             <p>Industry</p>
                         </div>
                         <div class="col-lg-2 wow fadeInLeft text-center"
                             style="visibility: visible; animation-name: fadeInLeft;"> <img
-                                src="https://www.spanglobalservices.com/assets/img/job-title.png" alt="job-title"
+                                src="/static/assets/img/job-title.png" alt="job-title"
                                 title="job-title" class="respo-img">
                             <p>Job Title</p>
                         </div>
                         <div class="col-lg-2 wow fadeInLeft text-center"
                             style="visibility: visible; animation-name: fadeInLeft;"> <img
-                                src="https://www.spanglobalservices.com/assets/img/technology.gif" alt="technology"
+                                src="/static/assets/img/technology.gif" alt="technology"
                                 title="technology" class="respo-img">
                             <p>Technology</p>
                         </div>
@@ -87,9 +87,9 @@
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
                                 <form name="f12" id="contact-form"
-                                    action="https://www.spanglobalservices.com/scripts/formmail" method="post"
+                                    action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
-                                        value="https://www.spanglobalservices.com/thanks"><input name="title"
+                                        value=" "><input name="title"
                                         type="hidden" value="Contact Request from Span Global Services">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
@@ -165,14 +165,14 @@
                     <div class="tab mb-tab-text">
                         <div class="row ">
                             <div class="col-sm-2"> <img
-                                    src="https://www.spanglobalservices.com/assets/img/mailing-list.png"
+                                    src="/static/assets/img/mailing-list.png"
                                     alt="Speciality" title="" class="table-icon" /> </div>
                             <div class="col-sm-10"> <button class="tablinks" onclick="openCity(event, 'Company')"
                                     id="defaultOpen">HR Mailing Lists by Specialty</button> </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-2"> <img
-                                    src="https://www.spanglobalservices.com/assets/img/other-detials.png"
+                                    src="/static/assets/img/other-detials.png"
                                     alt="Other Details" title="" class="table-icon" /> </div>
                             <div class="col-sm-10"> <button class="tablinks" onclick="openCity(event, 'Other')">Other
                                     Details</button> </div>
@@ -303,23 +303,23 @@
                     <div class="pad-sec">
                         <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Span Global Services’ HR Managers
                             Email Lists</h2>
-                        <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits"
+                        <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
                                 attributes</strong> </p>
-                        <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits"
+                        <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data
                                 Refresh Every Quarter</strong></p>
-                        <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits"
+                        <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Customized lists
                                 based on user’s need</strong> </p>
-                        <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits"
+                        <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Worldwide
                                 outreach with data from US, Canada, UK, Europe, Australia, and other countries </strong>
                         </p>
-                        <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits"
+                        <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>Fresh and active
                                 data verified quarterly with SMTP & NCOA protocols</strong></p>
-                        <p><img src="https://www.spanglobalservices.com/assets/img/green-right.png" alt="Benefits"
+                        <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>All-inclusive
                                 data to facilitate multi-channel & cross-channel marketing.</strong></p>
                         <div class="mb-4 mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
@@ -348,7 +348,7 @@
                 <div class="col-lg-6 mb-4 wow fadeInRight">
                     <h2 class="subhead-small-blk text-center">Data Fields We Provide Includes</h2>
                     <p><a href="#requestquote"><img
-                                src="https://www.spanglobalservices.com/assets/img/hr-data-field.jpg"
+                                src="/static/assets/img/hr-data-field.jpg"
                                 alt="HR Mailing Lists" title="" class="repo-img"></a></p>
                 </div>
             </div>
@@ -393,41 +393,41 @@
                     <div class="dgreen-bg-list-outer">
                         <table class="dgreen-bg-list">
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/gas-stations-email-list"
+                                <td><a href="/gas-stations-email-list"
                                         title="Gas Stations Mailing List">Gas Stations Mailing List</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/hvac-contractors-email-list"
+                                <td><a href="/hvac-contractors-email-list"
                                         title="HVAC Contractors Email List">HVAC Contractors Email List</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/bankruptcy-email-list"
+                                <td><a href="/bankruptcy-email-list"
                                         title="Bankruptcy Email Leads">Bankruptcy Email Leads</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/home-business-email-list"
+                                <td><a href="/home-business-email-list"
                                         title="Home Business Mailing Addresses">Home Business Mailing Addresses</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/child-care-center-email-list"
+                                <td><a href="/child-care-center-email-list"
                                         title="Child Care Center Contact List">Child Care Center Contact List</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/environmental-directors-email-list"
+                                <td><a href="/environmental-directors-email-list"
                                         title="Environmental Directors Mailing Database">Environmental Directors Mailing
                                         Database</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/fitness-and-recreation-center-email-list"
+                                <td><a href="/fitness-and-recreation-center-email-list"
                                         title="Fitness & Recreation Center Directroy">Fitness & Recreation Center
                                         Directroy</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/outdoor-sports-email-list"
+                                <td><a href="/outdoor-sports-email-list"
                                         title="List of Outdoor Sports">List of Outdoor Sports</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/pastors-priests-email-list"
+                                <td><a href="/pastors-priests-email-list"
                                         title="Pastors & Priests Email Addresses">Pastors & Priests Email Addresses</a>
                                 </td>
                             </tr>
@@ -438,36 +438,36 @@
                     <div class="dgreen-bg-list-outer">
                         <table class="dgreen-bg-list">
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/payroll-email-list"
+                                <td><a href="/payroll-email-list"
                                         title="Payroll Email List">Payroll Email List</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/pest-control-email-list"
+                                <td><a href="/pest-control-email-list"
                                         title="Pest Control Contact Database">Pest Control Contact Database</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/photographers-email-list"
+                                <td><a href="/photographers-email-list"
                                         title="Photographers Mailing List">Photographers Mailing List</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/sporting-and-recreational-good-email-list"
+                                <td><a href="/sporting-and-recreational-good-email-list"
                                         title="Sporting And Recreational Email Directory">Sporting And Recreational
                                         Email Directory</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/stockbrokers-email-list"
+                                <td><a href="/stockbrokers-email-list"
                                         title="Stockbrokers Email Addresses">Stockbrokers Email Addresses</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/loan-officer-email-list"
+                                <td><a href="/loan-officer-email-list"
                                         title="Loan Officer Email List">Loan Officer Email List</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/insurance-brokers-email-list"
+                                <td><a href="/insurance-brokers-email-list"
                                         title="List of Insurance Brokers">List of Insurance Brokers</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.spanglobalservices.com/database/auto-dealer-email-list"
+                                <td><a href="/auto-dealer-email-list"
                                         title="Auto Dealers Mailing Database">Auto Dealers Mailing Database</a></td>
                             </tr>
                         </table>
@@ -492,10 +492,10 @@
                         <div class="form">
                             <form method="post" name="contactside" class="contactForm"
                                 onsubmit="return fnValidationContactside()"
-                                action="https://www.spanglobalservices.com/scripts/formmail"
+                                action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
                                     value="Contact Details from Span Global Services"> <input name="redirect_url"
-                                    type="hidden" value="https://www.spanglobalservices.com/thanks">
+                                    type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
                                             class="form-control" id="fname" placeholder="First Name*"> </div>
